fixed the permalink

--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   My writings about computer science and programming.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "http://johesoman.github.io/"
-# twitter_username: jekyllrb
+permalink: /blog/:year/:month/:day/:title/
 github_username: johesoman
 linkedin_username: johesoman  
-
 # Build settings
 markdown: kramdown
 theme: minima
