--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Joel writes
 email: johesoman@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   My writings about computer science and programming.
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://johesoman.github.io/"
 permalink: /blog/:year/:month/:day/:title/
 github_username: johesoman
