--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: johesoman@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   My writings about computer science and programming.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://johesoman.github.io/"
+url: "http://johesoman.github.io/blog"
 permalink: /blog/:year/:month/:day/:title/
 github_username: johesoman
 linkedin_username: johesoman  
